--- a/css/airport.css
+++ b/css/airport.css
@@ -1,46 +1,60 @@
+body {
+  margin: 0
+}
+
 #container {
-  height: 100%;
-  width: 100%;
-  background-color: rgb(190, 190, 190);
-  position: fixed;
-  margin: auto;
+  background-color: rgb(150,150,150);
+}
+
+#header {
+  font-family: "Garamond";
   text-align: center;
+  font-size: 30px;
+  padding: 10px;
 }
 
-
-#airport {
+#game {
+  position: relative;
+  height: 500px;
+  width: 1200px;
+  margin: 0 auto;
+  padding: 10px;
   background-color: rgb(100, 100, 100);
-  height: 100%;
-  width: 100%;
 }
 
+p {
+  font-family: "Garamond";
+  top: 10px;
+  left: 850px;
+  position: absolute;
+}
 
 #runway {
-  position: fixed;
+  position: absolute;
   top: 300px;
-  left: 30px;
 }
 
 #boeing {
-position: fixed;top: 305px;
-left: 50px;
+  position: absolute;
+  top: 305px;
+  left: 30px;
 }
 
 #terminal {
-  position: fixed;
-  top: 40px;
-  left: 600px;
+  position: absolute;
+  top: 20px;
+  left: 500px;
 }
 
 #airbus {
-  position: fixed;
-  right: 150px;
-  top: 320px;
+  position: absolute;
+  left: 860px;
+  top: 220px;
 }
 
 #endOfRunway {
-  position: fixed;
+  position: absolute;
   top: 320px;
-  right: 10px;
+  left: 1200px;
   background-color: rgba(200, 100, 100);
 }
